--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,15 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7.72467674e-01, 1.42771586e-01, 8.47607310e-02, 8.52343378e-09,\n",
+       "       2.36059547e-35])"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "index = pd.read_csv('src/Data/index.csv');\n",
     "\n",
-    "file_list = [\"2008\"];\n",
+    "file_list = [\"2009\"];\n",
     "\n",
     "for file in file_list:\n",
     "\n",
@@ -38,8 +50,164 @@
     "#     result = result[result[\"S/K\"] < 1.1]\n",
     "\n",
     "\n",
-    "    \n"
+    "result1 = result[[\"S/K\", \"day_diff\",\"rf\",\"close\", \"strike_price\", \"impl_volatility\"]]\n",
+    "\n",
+    "final = result1[result[\"S/K\"] == 0.9]\n",
+    "\n",
+    "for dtm in range(30, 300, 30):\n",
+    "    for sk in [0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2]:\n",
+    "        con = result1[result1[\"day_diff\"] == dtm]\n",
+    "        con = con[(con[\"S/K\"] > (sk-0.001))&(con[\"S/K\"] < (sk+0.001))]\n",
+    "        final = final.append(con) \n",
+    "\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "pca = PCA(n_components=5)\n",
+    "\n",
+    "features = [\"S/K\", \"day_diff\",\"rf\",\"close\", \"strike_price\"]\n",
+    "target = ['impl_volatility']\n",
+    "x = final.loc[:, features].values\n",
+    "y = result.loc[:, target].values\n",
+    "1\n",
+    "pca = PCA(n_components=5)\n",
+    "principalComponents = pca.fit_transform(x)\n",
+    "principalDf = pd.DataFrame(data = principalComponents\n",
+    "             , columns = ['p1', 'p2', 'p3', 'p4','p5'])\n",
+    "\n",
+    "pca.explained_variance_ratio_\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
